# mcp-server-mounts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: architecture.md  auth.md  getting-started.md  index.md  mcp-apis.md
src/: main.py
src/core/: config.py
src/hr_policy_mcp/: __init__.py  server.py
src/hr_policy_mcp/resources/: policies.py
src/hr_policy_mcp/services/: policy_service.py
src/math_mcp/: __init__.py  server.py
src/math_mcp/tools/: basic.py
src/middleware/: token_verifier.py
tests/src/: test_config.py  test_main_server.py
